chore: update config

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>Title</title>
     <script>
         window.addEventListener('error', (e) => {
-            console.log(e);
-        });
-
+            console.log('index.html 文档监听', e);
+        })
     </script>
+    <script src="https://world.vercel.app" crossorigin="anonymous"></script>
 </head>
 <body>
-<script src="http://hello-world.com/script" crossorigin="anonymous"></script>
+Hello World！
 </body>
 </html>
