chore: add script

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             console.log('index.html 文档监听', e);
         })
     </script>
-    <script src="https://world.vercel.app" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/gh/yuzhanglong/on-error-problem/script.js" crossorigin="anonymous"></script>
 </head>
 <body>
 Hello World！
